fixed styling of tooltip sometimes resulting in element alignment being slightly off

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -935,6 +935,9 @@ textarea {
 .tooltip-target:hover i {
     font-weight: 900;
 }
+.v-popover > .trigger {
+    display: inherit !important;
+}
 
 // CUSTOM RADIO AND CHECKBOX BUTTONS
 .checkbox,
